--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -529,6 +529,18 @@
     &__info
       flex-basis: 100%
       margin-bottom: 14px
+  .modal
+    &__dialog
+      min-width: 100%
+      padding: 33px 23px
+    &__message
+      margin-bottom: 14px
+    &__button
+      order: 1
+      margin-top: 0
+    &__info
+      flex-basis: 100%
+      margin-bottom: 14px
 @media (max-width: 320px)
   body
     padding-top: 71px
@@ -710,13 +722,4 @@
       margin-bottom: 15px
   .modal
     &__dialog
-      min-width: 100%
       padding: 33px 13px
-    &__message
-      margin-bottom: 14px
-    &__button
-      order: 1
-      margin-top: 0
-    &__info
-      flex-basis: 100%
-      margin-bottom: 14px
