--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -64,7 +64,26 @@
     color: $light
     background-color: $dark
     max-width: 364px
+    height: 500px
     padding: 40px 21px 30px 43px
+    overflow-y: scroll
+    &::-webkit-scrollbar
+      width: 6px
+      height: 6px
+    &::-webkit-scrollbar-button
+      background-color: $dark
+    &::-webkit-scrollbar-track
+      background-color: $dark
+    &::-webkit-scrollbar-track-piece
+      background-color: #85919E
+    &::-webkit-scrollbar-thumb
+      height: 50px
+      background-color: $dark
+      border-radius: 6px
+    &::-webkit-scrollbar-corner
+      background-color: $dark
+    &::-webkit-resizer
+      background-color: $dark
   &__title
     font-weight: 700
     font-size: 18px
